--- a/results-sink/pom.xml
+++ b/results-sink/pom.xml
@@ -24,6 +24,7 @@
 		<java.version>1.8</java.version>
 		<spring-cloud-gcp.version>1.0.0.RELEASE</spring-cloud-gcp.version>
 		<spring-cloud.version>Finchley.SR1</spring-cloud.version>
+		<spring-cloud-gcp.version>1.1.0.M1</spring-cloud-gcp.version>
 		<spring-cloud-function.version>2.0.0.BUILD-SNAPSHOT</spring-cloud-function.version>
 	</properties>
 
@@ -42,7 +43,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-gcp-starter-sql-mysql</artifactId>
+			<artifactId>spring-cloud-gcp-starter-data-spanner</artifactId>
 		</dependency>
 
 		<dependency>
@@ -57,7 +58,7 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-function-dependencies</artifactId>
-				<version>${spring-cloud-function.version}</version>
+					<version>${spring-cloud-function.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
