--- a/results-sink/src/main/resources/application.properties
+++ b/results-sink/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-spring.cloud.gcp.sql.database-name=workshop
-
-spring.datasource.initialization-mode=always
-spring.datasource.hikari.maximum-pool-size=2
+spring.cloud.gcp.spanner.instance-id=workshop
+spring.cloud.gcp.spanner.database=catnotcat
